--- a/css/article-standard.css
+++ b/css/article-standard.css
@@ -92,49 +92,51 @@ body {
 
             /* ------------------------------------------------------------------------------------- */
 
-            .mini-box {
-                display: flex;
-                justify-content: center;
-                align-items: center;
-                width: 196px;
-                height: 66px;
-                background-color: rgba(78, 164, 135, 1);
-                border-radius: 10px;
-                transform: rotate(-12deg);
-                .light {
+            .pro-tip {
+                .mini-box {
                     display: flex;
-                    align-items: center;
                     justify-content: center;
-                    gap: 10px;
+                    align-items: center;
+                    width: 196px;
+                    height: 66px;
+                    background-color: rgba(78, 164, 135, 1);
+                    border-radius: 10px;
+                    transform: rotate(-12deg);
+                    .light {
+                        display: flex;
+                        align-items: center;
+                        justify-content: center;
+                        gap: 10px;
+                    }
+                    p {
+                        font-weight: bold;
+                        font-size: 28px;
+                        color: rgba(241, 201, 83, 1);
+                    }
                 }
-                p {
-                    font-weight: bold;
-                    font-size: 28px;
-                    color: rgba(241, 201, 83, 1);
-                }
-            }
 
-            .big-box {
-                display: flex;
-                flex-direction: column;
-                align-items: center;
-                background-color: rgba(78, 164, 135, 0.2);
-                border-radius: 30px;
-            margin-bottom: 40px;
-                .box-text {
-                    padding: 10px;
-                    text-align: center;
-                    font-family: "Palanquin";
-                    font-weight: 400;
-                    font-size: 16px;
-                    line-height: 1.2;
-                    color: rgba(84, 55, 13, 1);
-                    text-align: start;
-                    padding: 30px;
-                }
-                .box-fett {
-                    color: rgba(78, 164, 135, 1);
-                    font-weight: bold;
+                .big-box {
+                    display: flex;
+                    flex-direction: column;
+                    align-items: center;
+                    background-color: rgba(78, 164, 135, 0.2);
+                    border-radius: 30px;
+                    margin-bottom: 40px;
+                    .box-text {
+                        padding: 10px;
+                        text-align: center;
+                        font-family: "Palanquin";
+                        font-weight: 400;
+                        font-size: 16px;
+                        line-height: 1.2;
+                        color: rgba(84, 55, 13, 1);
+                        text-align: start;
+                        padding: 30px;
+                    }
+                    .box-fett {
+                        color: rgba(78, 164, 135, 1);
+                        font-weight: bold;
+                    }
                 }
             }
 
@@ -243,6 +245,10 @@ body {
                 }
             }
         }
+        .pro-tip {
+            padding-left: 80px;
+            padding-right: 80px;
+        }
         .follow-me-section {
             max-width: 500px;
         }
@@ -259,5 +265,4 @@ body {
             }
         }
     }
-
 }
