--- a/css/header-footer.css
+++ b/css/header-footer.css
@@ -42,6 +42,9 @@ header {
                 justify-content: space-around;
                 list-style-type: none;
                 gap: 40px;
+
+
+                
             }
         }
 
@@ -51,9 +54,36 @@ header {
             text-decoration: none;
         }
 
+        a:hover {
+            text-decoration-line: underline;
+            text-decoration-style: wavy;
+            text-decoration-color: #f1c953;
+        }
+
+        a.active {
+            font-weight: bold;
+            color: #f1c953;
+        }
+
         img {
             width: 56px;
             height: 56px;
+        }
+
+        li {
+            input {
+                display: none;
+            }
+
+            label {
+                cursor: pointer;
+                color: #54370d;
+            }
+
+            input:checked + label {
+                color: #f1c953;
+                text-decoration: underline wavy;
+            }
         }
     }
 }
@@ -193,7 +223,7 @@ footer {
                 flex-direction: row-reverse;
                 justify-content: flex-end; /* Flex-end wegen row-reverse */
 
-                gap: 50px;
+                gap: 100px;
 
                 p {
                     font-size: 16px;
