--- a/css/style.css
+++ b/css/style.css
@@ -198,12 +198,12 @@
     animation-delay: 4s; /* Rotation startet nach 6s (4s + 2s Fade + 0s Pause) */
 }
 
-
-
-
 /* Landing-page animation Ende  --------------------- */
 
 main {
+    .desktop-animation-placeholder {
+        display: none;
+    }
     .content {
         width: 100%;
         margin-left: auto;
@@ -213,11 +213,12 @@ main {
 
         .headline {
             display: flex;
+
             align-items: center;
             justify-content: center;
             gap: 10px;
             padding-top: 50px;
-            padding-bottom: 20px;
+            padding-bottom: 30px;
             h2 {
                 font-family: "Arima";
                 font-size: 40px;
@@ -235,6 +236,11 @@ main {
             display: flex;
             flex-direction: column;
             align-items: center;
+
+            p {
+                max-width: 1000px;
+                padding-bottom: 40px;
+            }
 
             .highlights-slider {
                 position: relative;
@@ -293,7 +299,7 @@ main {
 
                     p {
                         padding-top: 10px;
-                        font-family: "Palanquin Dark";
+                        font-family: "Palanquin";
                         font-weight: 400;
                         font-size: 18px;
                         line-height: 1;
@@ -370,13 +376,17 @@ main {
                 margin-right: auto;
             }
 
+            .dropdown:hover {
+                cursor: pointer;
+            }
+
             .content {
                 margin-top: 10px; /* Margin der content box */
             }
 
             .content p {
                 /* Content Formatierung */
-                background: #eee;
+                background: #ffffff;
                 padding: 12px;
                 border-radius: 8px;
             }
@@ -531,6 +541,17 @@ main {
 
 @media screen and (min-width: 768px) {
     main {
+        .desktop-animation-placeholder {
+            display: flex;
+
+            img {
+                width: 100dvw;
+            }
+        }
+        .slider {
+            display: none;
+        }
+
         .content {
             .highlight-section {
                 .highlights-slider {
